--- a/app2/package.json
+++ b/app2/package.json
@@ -8,7 +8,7 @@
     "babel-loader": "8.1.0",
     "html-webpack-plugin": "4.5.0",
     "serve": "11.3.2",
-    "webpack": "5.0.0",
+    "webpack": "git+https://github.com/ScriptedAlchemy/webpack.git#mf/container-startup",
     "webpack-cli": "4.0.0",
     "webpack-dev-server": "3.11.0"
   },
